compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/caseInProperties.kt
// FIR_IDENTICAL
<!CONFLICTING_JVM_DECLARATIONS!>konst aa<!> = 1
<!CONFLICTING_JVM_DECLARATIONS!>konst Aa<!> = 1